# robotics-core1

./: Makefile  README.md
dsl/: README.md
go-layer/: README.md  go.mod
go-layer/cmd/server/: main.go
go-layer/internal/api/: server.go  ws_client.go
integration/: README.md
python-layer/: pyproject.toml
python-layer/src/robotics_core_python/: __init__.py  brain_controller.py  meta_programming.py
rust-core/: .gitignore  Cargo.toml
rust-core/src/: algorithm.rs  lib.rs  memory.rs
