[build-system]
requires = ["setuptools>=42", "wheel", "setuptools-rust>=1.4.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robotics_core_python"
version = "0.1.0"
description = "Python layer for robotics-core1"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "numpy",
    "pydantic",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy",
]
